# serializer version: 1
# name: test_trace_image_disordered[catenane]
  dict({
    'grain_0': dict({
      'bbox': tuple(
        0,
        2,
        323,
        325,
      ),
      'branch_indexes': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      'branch_types': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      'original_grain': array([[False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         ...,
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False]]),
      'original_image': array([[-0.08690765, -0.08389194, -0.06598138, ...,  0.0110641 ,
          -0.00549059, -0.01650386],
         [-0.12658192, -0.08494661, -0.04653462, ...,  0.04816124,
          -0.00038978, -0.02605748],
         [-0.13415811, -0.06316563, -0.00676727, ...,  0.04136891,
          -0.0228975 , -0.06000114],
         ...,
         [ 0.        ,  0.        ,  0.        , ..., -0.04287827,
          -0.01226475,  0.00147526],
         [ 0.        ,  0.        ,  0.        , ...,  0.00851397,
           0.01296311, -0.00605352],
         [ 0.        ,  0.        ,  0.        , ...,  0.04690913,
           0.02818649, -0.0217186 ]]),
      'pad_width': 1,
      'pruned_skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=uint8),
      'skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int8),
      'smoothed_grain': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int32),
    }),
    'grain_1': dict({
      'bbox': tuple(
        77,
        75,
        400,
        398,
      ),
      'branch_indexes': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      'branch_types': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      'original_grain': array([[False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         ...,
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False]]),
      'original_image': array([[-0.0217186 ,  0.02818649,  0.04690913, ...,  0.        ,
           0.        ,  0.        ],
         [-0.00605352,  0.01296311,  0.00851397, ...,  0.        ,
           0.        ,  0.        ],
         [ 0.00147526, -0.01226475, -0.04287827, ...,  0.        ,
           0.        ,  0.        ],
         ...,
         [-0.06000114, -0.0228975 ,  0.04136891, ..., -0.00676727,
          -0.06316563, -0.13415811],
         [-0.02605748, -0.00038978,  0.04816124, ..., -0.04653462,
          -0.08494661, -0.12658192],
         [-0.01650386, -0.00549059,  0.0110641 , ..., -0.06598138,
          -0.08389194, -0.08690765]]),
      'pad_width': 1,
      'pruned_skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=uint8),
      'skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int8),
      'smoothed_grain': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int32),
    }),
  })
# ---
# name: test_trace_image_disordered[catenane].1
  dict({
    'branch_indexes': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
    'branch_types': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
    'pruned_skeleton': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
    'skeleton': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
    'smoothed_grain': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
  })
# ---
# name: test_trace_image_disordered[catenane].2
  DisorderedTrace(images={'original_image': array([[-0.08690765, -0.08389194, -0.06598138, ...,  0.0110641 ,
          -0.00549059, -0.01650386],
         [-0.12658192, -0.08494661, -0.04653462, ...,  0.04816124,
          -0.00038978, -0.02605748],
         [-0.13415811, -0.06316563, -0.00676727, ...,  0.04136891,
          -0.0228975 , -0.06000114],
         ...,
         [ 0.        ,  0.        ,  0.        , ..., -0.04287827,
          -0.01226475,  0.00147526],
         [ 0.        ,  0.        ,  0.        , ...,  0.00851397,
           0.01296311, -0.00605352],
         [ 0.        ,  0.        ,  0.        , ...,  0.04690913,
           0.02818649, -0.0217186 ]]), 'original_grain': array([[False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         ...,
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False]]), 'smoothed_grain': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int32), 'skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int8), 'pruned_skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=uint8), 'branch_types': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]), 'branch_indexes': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]), 'bbox': (0, 2, 323, 325), 'pad_width': 1}, grain_endpoints=np.int64(0), grain_junctions=np.int64(14), total_branch_length=np.float64(5.759292550205616e-07), grain_width_mean=np.float64(4.406927419327375e-09))
# ---
# name: test_trace_image_disordered[catenane].3
  DisorderedTrace(images={'original_image': array([[-0.0217186 ,  0.02818649,  0.04690913, ...,  0.        ,
           0.        ,  0.        ],
         [-0.00605352,  0.01296311,  0.00851397, ...,  0.        ,
           0.        ,  0.        ],
         [ 0.00147526, -0.01226475, -0.04287827, ...,  0.        ,
           0.        ,  0.        ],
         ...,
         [-0.06000114, -0.0228975 ,  0.04136891, ..., -0.00676727,
          -0.06316563, -0.13415811],
         [-0.02605748, -0.00038978,  0.04816124, ..., -0.04653462,
          -0.08494661, -0.12658192],
         [-0.01650386, -0.00549059,  0.0110641 , ..., -0.06598138,
          -0.08389194, -0.08690765]]), 'original_grain': array([[False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         ...,
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False]]), 'smoothed_grain': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int32), 'skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int8), 'pruned_skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=uint8), 'branch_types': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]), 'branch_indexes': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]), 'bbox': (77, 75, 400, 398), 'pad_width': 1}, grain_endpoints=np.int64(0), grain_junctions=np.int64(12), total_branch_length=np.float64(5.746673912389996e-07), grain_width_mean=np.float64(4.456449209835062e-09))
# ---
# name: test_trace_image_disordered[replication intermediate]
  dict({
    'grain_0': dict({
      'bbox': tuple(
        19,
        4,
        341,
        326,
      ),
      'branch_indexes': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      'branch_types': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
      'original_grain': array([[False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         ...,
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False]]),
      'original_image': array([[-0.02291669, -0.01486279,  0.0156244 , ...,  0.10213933,
           0.19618212,  0.32910987],
         [ 0.01603361,  0.01538401,  0.03241716, ...,  0.022104  ,
           0.08265235,  0.19294447],
         [ 0.06660668,  0.06494583,  0.08754444, ..., -0.0450188 ,
           0.00860285,  0.10432224],
         ...,
         [-0.0105027 ,  0.07281032,  0.129741  , ..., -0.09141097,
          -0.0802732 , -0.04030608],
         [-0.05083104,  0.00384337,  0.02205012, ...,  0.05126939,
           0.02986353,  0.03186179],
         [-0.05980545, -0.03809099, -0.04490479, ...,  0.12167436,
           0.08517437,  0.06576524]]),
      'pad_width': 1,
      'pruned_skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=uint8),
      'skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int8),
      'smoothed_grain': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int32),
    }),
  })
# ---
# name: test_trace_image_disordered[replication intermediate].1
  dict({
    'branch_indexes': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
    'branch_types': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
    'pruned_skeleton': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
    'skeleton': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
    'smoothed_grain': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]),
  })
# ---
# name: test_trace_image_disordered[replication intermediate].2
  DisorderedTrace(images={'original_image': array([[-0.02291669, -0.01486279,  0.0156244 , ...,  0.10213933,
           0.19618212,  0.32910987],
         [ 0.01603361,  0.01538401,  0.03241716, ...,  0.022104  ,
           0.08265235,  0.19294447],
         [ 0.06660668,  0.06494583,  0.08754444, ..., -0.0450188 ,
           0.00860285,  0.10432224],
         ...,
         [-0.0105027 ,  0.07281032,  0.129741  , ..., -0.09141097,
          -0.0802732 , -0.04030608],
         [-0.05083104,  0.00384337,  0.02205012, ...,  0.05126939,
           0.02986353,  0.03186179],
         [-0.05980545, -0.03809099, -0.04490479, ...,  0.12167436,
           0.08517437,  0.06576524]]), 'original_grain': array([[False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         ...,
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False],
         [False, False, False, ..., False, False, False]]), 'smoothed_grain': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int32), 'skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=int8), 'pruned_skeleton': array([[0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         ...,
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0],
         [0, 0, 0, ..., 0, 0, 0]], dtype=uint8), 'branch_types': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]), 'branch_indexes': array([[0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         ...,
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.],
         [0., 0., 0., ..., 0., 0., 0.]]), 'bbox': (19, 4, 341, 326), 'pad_width': 1}, grain_endpoints=np.int64(0), grain_junctions=np.int64(13), total_branch_length=np.float64(9.685225788725929e-07), grain_width_mean=np.float64(3.031795147452633e-09))
# ---
# name: test_trace_image_disordered_dataframes[catenane]
  '''
                            image  grain_endpoints  grain_junctions  total_branch_lengths  grain_width_mean
  grain_number                                                                                             
  0             example_catenanes                0               14            5.7593e-07        4.4069e-09
  1             example_catenanes                0               12            5.7467e-07        4.4564e-09
  '''
# ---
# name: test_trace_image_disordered_dataframes[catenane].1
  '''
                  image  grain_number  branch_distance  branch_type connected_segments  mean_pixel_value  stdev_pixel_value  min_value  median_value  middle_value
  0   example_catenanes             0       3.0750e+01            2          [1, 2, 6]        2.6893e+00         3.8411e-01 1.9935e+00    2.6472e+00    2.6961e+00
  1   example_catenanes             0       1.6661e+00            2       [0, 2, 3, 4]        4.0744e+00         1.5774e-01 3.8166e+00    4.1385e+00    4.1396e+00
  2   example_catenanes             0       2.8443e+01            2          [0, 1, 6]        2.7279e+00         2.1417e-01 2.5507e+00    2.6838e+00    2.6580e+00
  3   example_catenanes             0       1.4661e+02            2         [1, 4, 10]        2.6702e+00         2.9523e-01 1.1657e+00    2.7072e+00    2.9116e+00
  4   example_catenanes             0       2.6170e+01            2         [1, 3, 10]        2.8361e+00         3.4353e-01 2.5354e+00    2.7608e+00    2.7651e+00
  5   example_catenanes             0       2.2459e+02            2      [6, 7, 9, 11]        2.7015e+00         2.6331e-01 1.7874e+00    2.7330e+00    2.2574e+00
  6   example_catenanes             0       6.9504e+00            2       [0, 2, 5, 7]        3.6421e+00         6.3412e-01 2.5888e+00    3.8420e+00    3.8420e+00
  7   example_catenanes             0       3.1203e+01            2      [5, 6, 8, 11]        2.8382e+00         5.5112e-01 2.1307e+00    2.7052e+00    2.7530e+00
  8   example_catenanes             0       3.1489e+01            2     [7, 9, 10, 11]        2.7456e+00         3.8201e-01 2.4149e+00    2.6596e+00    2.4707e+00
  9   example_catenanes             0       3.8390e+01            2     [5, 8, 10, 11]        2.7882e+00         1.4672e-01 2.4606e+00    2.7710e+00    2.6878e+00
  10  example_catenanes             0       5.0821e+00            2       [3, 4, 8, 9]        2.7182e+00         5.2371e-02 2.6526e+00    2.7124e+00    2.7498e+00
  11  example_catenanes             0       4.5941e+00            2       [5, 7, 8, 9]        4.1266e+00         3.7134e-01 3.3511e+00    4.2387e+00    4.2387e+00
  0   example_catenanes             1       3.7700e+01            2       [1, 2, 3, 6]        2.7705e+00         1.3278e-01 2.4451e+00    2.7690e+00    2.7142e+00
  1   example_catenanes             1       2.2389e+02            2       [0, 2, 4, 9]        2.6964e+00         2.6441e-01 1.8203e+00    2.7314e+00    2.2744e+00
  2   example_catenanes             1       5.2843e+00            2       [0, 1, 3, 4]        4.0169e+00         4.5156e-01 3.0770e+00    4.1850e+00    4.1850e+00
  3   example_catenanes             1       3.0513e+01            2       [0, 2, 4, 6]        2.7143e+00         3.2154e-01 2.4439e+00    2.6513e+00    2.4707e+00
  4   example_catenanes             1       3.1608e+01            2       [1, 2, 3, 9]        2.8418e+00         5.5811e-01 2.1558e+00    2.6942e+00    2.7530e+00
  5   example_catenanes             1       1.4778e+02            2         [6, 7, 11]        2.6741e+00         2.9325e-01 1.2200e+00    2.7143e+00    2.9116e+00
  6   example_catenanes             1       5.3680e+00            2       [0, 3, 5, 7]        2.7307e+00         4.7460e-02 2.6548e+00    2.7379e+00    2.7495e+00
  7   example_catenanes             1       2.5682e+01            2         [5, 6, 11]        2.8449e+00         3.4965e-01 2.5354e+00    2.7618e+00    2.7705e+00
  8   example_catenanes             1       2.7669e+01            2        [9, 10, 11]        2.7137e+00         1.6781e-01 2.5507e+00    2.6864e+00    2.6580e+00
  9   example_catenanes             1       6.9504e+00            2      [1, 4, 8, 10]        3.6818e+00         5.9773e-01 2.6486e+00    3.8420e+00    3.8420e+00
  10  example_catenanes             1       2.9858e+01            2         [8, 9, 11]        2.6558e+00         3.3230e-01 1.9935e+00    2.6480e+00    2.6944e+00
  11  example_catenanes             1       2.3563e+00            2      [5, 7, 8, 10]        3.9427e+00         2.4724e-01 3.5452e+00    4.0046e+00    4.0046e+00
  '''
# ---
# name: test_trace_image_disordered_dataframes[replication intermediate]
  '''
                      image  grain_endpoints  grain_junctions  total_branch_lengths  grain_width_mean
  grain_number                                                                                       
  0             example_rep                0               13            9.6852e-07        3.0318e-09
  '''
# ---
# name: test_trace_image_disordered_dataframes[replication intermediate].1
  '''
                image  grain_number  branch_distance  branch_type connected_segments  mean_pixel_value  stdev_pixel_value  min_value  median_value  middle_value
  0   example_rep_int             0       1.7269e+02            2       [1, 2, 3, 8]        2.1474e+00         1.8580e-01 1.4118e+00    2.1479e+00    2.1939e+00
  1   example_rep_int             0       3.3804e+02            2      [0, 2, 7, 11]        2.1262e+00         1.8417e-01 1.1279e+00    2.1329e+00    2.2363e+00
  2   example_rep_int             0       6.9014e-01            2       [0, 1, 3, 4]        3.5129e+00         2.4417e-01 3.2687e+00    3.5129e+00    3.5129e+00
  3   example_rep_int             0       7.5415e+01            2       [0, 2, 4, 8]        2.1781e+00         2.2953e-01 1.4118e+00    2.1784e+00    2.2734e+00
  4   example_rep_int             0       3.1893e+01            2       [2, 3, 5, 6]        2.1379e+00         3.3898e-01 1.7556e+00    2.0944e+00    2.2880e+00
  5   example_rep_int             0       5.1517e+01            2          [4, 6, 7]        2.2339e+00         2.3611e-01 1.7265e+00    2.2070e+00    2.0221e+00
  6   example_rep_int             0       1.1781e+00            2          [4, 5, 7]        3.4336e+00         2.9158e-01 3.0268e+00    3.5782e+00    3.6957e+00
  7   example_rep_int             0       1.5383e+02            2      [1, 5, 6, 11]        2.1708e+00         2.3399e-01 1.3202e+00    2.1774e+00    2.1908e+00
  8   example_rep_int             0       5.8754e+01            2     [0, 3, 10, 11]        2.0020e+00         3.3701e-01 8.8592e-01    2.0826e+00    2.2475e+00
  9   example_rep_int             0       3.8962e+01            3               [10]        2.2736e+00         1.7805e-01 2.0016e+00    2.2595e+00    2.2033e+00
  10  example_rep_int             0       4.8800e-01            2         [8, 9, 11]        2.8751e+00         9.8813e-03 2.8652e+00    2.8751e+00    2.8751e+00
  11  example_rep_int             0       4.5069e+01            2      [1, 7, 8, 10]        2.1855e+00         2.2638e-01 1.2893e+00    2.2271e+00    2.2271e+00
  '''
# ---
